--- a/css/flat-ui.css
+++ b/css/flat-ui.css
@@ -6105,3 +6105,10 @@ color: #ffffff;
 margin-bottom: 77px;
 padding: 38px 38px 267px;
 position: relative;
+}
+
+.login-screen {
+background-color: #1abc9c;
+min-height: 317px;
+padding: 123px 199px 33px 306px;
+}
