--- a/css/flat-ui.css
+++ b/css/flat-ui.css
@@ -6096,19 +6096,94 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
   margin-left: 20px !important;
 }
 
-
-
 .login {
-background: url(/images/icons/imac.svg) 0 0 no-repeat;
-background-size: 940px 778px;
-color: #ffffff;
-margin-bottom: 77px;
-padding: 38px 38px 267px;
-position: relative;
+  background: url(/image/icons/imac.svg) 0 0 no-repeat;
+  background-size: 940px 778px;
+  color: #ffffff;
+  margin-bottom: 77px;
+  padding: 38px 38px 267px;
+  position: relative;
 }
-
 .login-screen {
-background-color: #1abc9c;
-min-height: 317px;
-padding: 123px 199px 33px 306px;
+  background-color: #1abc9c;
+  min-height: 317px;
+  padding: 123px 199px 33px 306px;
 }
+.login-icon {
+  left: 200px;
+  position: absolute;
+  top: 160px;
+  width: 96px;
+}
+.login-icon > img {
+  display: block;
+  margin-bottom: 6px;
+  width: 100%;
+}
+.login-icon > h4 {
+  font-size: 17px;
+  font-weight: 200;
+  line-height: 34px;
+  opacity: 0.95;
+  filter: alpha(opacity=95);
+}
+.login-icon > h4 small {
+  color: inherit;
+  display: block;
+  font-size: inherit;
+  font-weight: 700;
+}
+.login-form {
+  background-color: #edeff1;
+  padding: 24px 23px 20px;
+  position: relative;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
+.login-form:before {
+  content: '';
+  border-style: solid;
+  border-width: 12px 12px 12px 0;
+  border-color: transparent #edeff1 transparent transparent;
+  height: 0;
+  position: absolute;
+  left: -12px;
+  top: 35px;
+  width: 0;
+  -webkit-transform: rotate(360deg);
+}
+.login-form .control-group {
+  margin-bottom: 6px;
+  position: relative;
+}
+.login-form .login-field {
+  border-color: transparent;
+  font-size: 17px;
+  padding-bottom: 11px;
+  padding-top: 11px;
+  text-indent: 3px;
+  width: 299px;
+  margin-bottom: 10px !important;
+}
+.login-form .login-field:focus + .login-field-icon {
+  color: #1abc9c;
+}
+.login-form .login-field-icon {
+  color: #bfc9ca;
+  font-size: 16px;
+  position: absolute;
+  right: 13px;
+  top: 14px;
+  -webkit-transition: 0.25s;
+  -moz-transition: 0.25s;
+  -o-transition: 0.25s;
+  transition: 0.25s;
+  -webkit-backface-visibility: hidden;
+}
+.login-link {
+  color: #bfc9ca;
+  display: block;
+  font-size: 13px;
+  margin-top: 15px;
+  text-align: center;
