--- a/css/flat-ui.css
+++ b/css/flat-ui.css
@@ -6097,7 +6097,7 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
 }
 
 .login {
-  background: url(/images/icons/imac.svg) 0 0 no-repeat;
+  background: url(../images/login/imac.png) 0 0 no-repeat;
   background-size: 940px 778px;
   color: #ffffff;
   margin-bottom: 77px;
@@ -6187,4 +6187,12 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
   font-size: 13px;
   margin-top: 15px;
   text-align: center;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 2) {
+  .login {
+    background-image: url(/Developer/common-files/icons/iMac@2x.png);
+  }
+}
+.last-col {
+  overflow: hidden;
 
