--- a/css/flat-ui.css
+++ b/css/flat-ui.css
@@ -6097,7 +6097,7 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
 }
 
 .login {
-  background: url(../images/login/imac.png) 0 0 no-repeat;
+  background: url(/Developer/common-files/img/login/imac.png) 0 0 no-repeat;
   background-size: 940px 778px;
   color: #ffffff;
   margin-bottom: 77px;
